crates/aquascope/tests/snapshots/boundaries__refit@match_1.test.snap
---
source: crates/aquascope/tests/boundaries.rs
description: refit@match_1.test
---
- location:
    line: 4
    column: 11
  expected:
    read: true
    write: false
    drop: false
  actual:
    read: true
    write: false
    drop: true
  data:
    type_droppable: true
    type_writeable: false
    type_copyable: false
    is_live: true
    path_uninitialized: false
- location:
    line: 9
    column: 7
  expected:
    read: true
    write: false
    drop: true
  actual:
    read: true
    write: false
    drop: true
  data:
    type_droppable: true
    type_writeable: false
    type_copyable: false
    is_live: true
    path_uninitialized: false
