crates/aquascope/tests/snapshots/boundaries__test@deref_assign_0.test.snap
---
source: crates/aquascope/tests/boundaries.rs
description: test@deref_assign_0.test
---
- location:
    line: 7
    column: 2
  expected:
    read: true
    write: true
    drop: false
  actual:
    read: true
    write: true
    drop: false
  data:
    type_droppable: false
    type_writeable: true
    type_copyable: true
    is_live: true
    path_uninitialized: false
