crates/aquascope/tests/snapshots/boundaries__with_int@array_1.test.snap
---
source: crates/aquascope/tests/boundaries.rs
description: with_int@array_1.test
---
- location:
    line: 10
    column: 11
  expected:
    read: true
    write: false
    drop: false
  actual:
    read: true
    write: false
    drop: true
  data:
    type_droppable: true
    type_writeable: false
    type_copyable: true
    is_live: true
    path_uninitialized: false
- location:
    line: 12
    column: 8
  expected:
    read: true
    write: false
    drop: false
  actual:
    read: true
    write: false
    drop: true
  data:
    type_droppable: true
    type_writeable: false
    type_copyable: true
    is_live: true
    path_uninitialized: false
