crates/aquascope/tests/snapshots/boundaries__with_string@array_1.test.snap
---
source: crates/aquascope/tests/boundaries.rs
description: with_string@array_1.test
---
- location:
    line: 4
    column: 11
  expected:
    read: true
    write: false
    drop: true
  actual:
    read: true
    write: false
    drop: false
  data:
    type_droppable: false
    type_writeable: false
    type_copyable: false
    is_live: true
    path_uninitialized: false
